--- a/BlazorDemo/BlazorDemo/Components/Layout/NavMenu.razor
+++ b/BlazorDemo/BlazorDemo/Components/Layout/NavMenu.razor
@@ -40,6 +40,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Champions
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="clientes">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Clientes
+            </NavLink>
+        </div>
     </nav>
 </div>
 
