--- a/BlazorDemo/BlazorDemo/Components/_Imports.razor
+++ b/BlazorDemo/BlazorDemo/Components/_Imports.razor
@@ -1,5 +1,6 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+@using BlazorDemo.Shared.Interfaces
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
@@ -12,3 +13,7 @@
 @using Microsoft.AspNetCore.Components.QuickGrid
 @using BlazorDemo.Context
 @using BlazorDemo.Entities
+
+@inject IClienteRepository _clienteRepository
+@inject NavigationManager _navigation
+@inject IJSRuntime js
