+Finalização do CRUD e error 404 :(

--- a/BlazorDemo/BlazorDemo.Client/_Imports.razor
+++ b/BlazorDemo/BlazorDemo.Client/_Imports.razor
@@ -7,3 +7,10 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using BlazorDemo.Client
+@using System.ComponentModel.DataAnnotations
+@using BlazorDemo.Shared.Interfaces
+@using BlazorDemo.Shared.Entities
+
+@inject IClienteRepository _clienteService
+@inject NavigationManager _navigation
+@inject IJSRuntime js
