--- a/BlazorDemo/BlazorDemo.Client/Pages/ManutencaoCliente.razor
+++ b/BlazorDemo/BlazorDemo.Client/Pages/ManutencaoCliente.razor
@@ -4,8 +4,69 @@
 
 <h3>ManutencaoCliente</h3>
 
+<div class="container">
+    <div class="row">
+        <div class="col-md-10">
+            <div class="card">
+                <div class="card-header">Manutenção</div>
+                <div class="card-body">
+                    <EditForm Model="ClienteModel" OnValidSubmit="HandleSalvar" FormName="Cliente">
+                        <div class="form-group">
+                            <label class="form-label">Nome</label>
+                            <InputText @bind-Value="ClienteModel.Name" class="form-control"></InputText>
+                            <ValidationMessage For="()=>ClienteModel.Name"></ValidationMessage>
+                        </div>
+                        <div class="form-group">
+                            <label class="form-label">Email</label>
+                            <InputText @bind-Value="ClienteModel.Email" class="form-control"></InputText>
+                            <ValidationMessage For="()=>ClienteModel.Email"></ValidationMessage>
+                        </div>
+                        <div class="form-group">
+                            <label class="form-label">Idade</label>
+                            <InputNumber @bind-Value="ClienteModel.Idade" class="form-control"></InputNumber>
+                            <ValidationMessage For="()=>ClienteModel.Idade"></ValidationMessage>
+                        </div>
+                        <button type="submit" class="btn btn-primary mt-2"></button>
+                        
+                    </EditForm>
+                </div>
+                <div class="card-footer">
+                    Nome: @ReturnCliente.Name <br />
+                    Email: @ReturnCliente.Email <br />
+                    Idade: @ReturnCliente.Idade
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 
 @code {
+    [Parameter] public int Id { get; set; }
+    public Cliente ClienteModel { get; set; } = new();
+    private Cliente ReturnCliente = new();
+
+
+
+
+    private async Task HandleSalvar() {
+        if (ClienteModel.Id > 0) {
+            ReturnCliente = await _clienteService.UpdateClienteAsync(ClienteModel);
+            ClienteModel = new();
+        } else
+        {
+            ReturnCliente = await _clienteService.AddClienteAsync(ClienteModel);
+            ClienteModel = new();
+        }
+    }
+
+    protected override async Task OnParametersSetAsync()
+    {
+        if (Id > 0)
+        {
+            ClienteModel = await _clienteService.GetClienteByIdAsync(Id);
+        }
+    }
 
 }
