--- a/BlazorDemo/BlazorDemo/Components/Pages/Clientes.razor
+++ b/BlazorDemo/BlazorDemo/Components/Pages/Clientes.razor
@@ -21,6 +21,7 @@
                                     <th>Id</th>
                                     <th>Nome</th>
                                     <th>Email</th>
+                                    <th>Idade</th>
                                     <th>Ações</th>
                                 </tr>
                             </thead>
@@ -31,6 +32,7 @@
                                         <td>@cliente.Id</td>
                                         <td>@cliente.Name</td>
                                         <td>@cliente.Email</td>
+                                        <td>@cliente.Idade</td>
                                         <td>
                                             <div class="hstack gap-2">
                                                 <button class="btn btn-info" @onclick="()=>Edit(cliente)">Editar</button>
