--- a/BlazorDemo/BlazorDemo/Components/_Imports.razor
+++ b/BlazorDemo/BlazorDemo/Components/_Imports.razor
@@ -15,6 +15,6 @@
 @using BlazorDemo.Context
 @using BlazorDemo.Entities
 
-@inject IClienteRepository _clienteRepository
+@inject IClienteRepositorio _clienteRepository
 @inject NavigationManager _navigation
 @inject IJSRuntime js
