--- a/BlazorDemo/BlazorDemo/Components/Layout/NavMenu.razor
+++ b/BlazorDemo/BlazorDemo/Components/Layout/NavMenu.razor
@@ -15,7 +15,7 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counterr">
+            <NavLink class="nav-link" href="counter">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
             </NavLink>
         </div>
@@ -43,6 +43,16 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="clientes">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Clientes
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="testewebassembly">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> TesteWebAssembly
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="teste">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Teste
             </NavLink>
         </div>
     </nav>
